--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
-    <title>sign_in</title>
+    <title>sign_in_Vionila</title>
 </head>
 
 <body>
@@ -23,13 +23,53 @@
     <!-- sign_in -->
     <div class="main d-flex">
         <div class="container">
-            <div class="col-lg-6 col-md-6 col-sm-12">
-                <div class="container">
-                    <form>
-                        <input type="email" class="mb-3 main-input" placeholder="Email">
-                        <input type="password" class="mb-3 main-input" placeholder="Password">
-                        <input type="button" class="main-btn" placeholder="Done">
-                    </form>
+            <div class="row">
+                <div class="col-lg-8 col-md-12 col-sm-12 d-flex justify-content-center align-items-center">
+                    <div class="container ml-lg-3">
+                        <form class="">
+                            <input type="email" class="mb-3 main-input" placeholder="Email">
+                            <input type="password" class="mb-3 main-input" placeholder="Password">
+                            <button type="button" class="main-btn">Done</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                    <div class="container">
+                        <div class="mina-bg-color">
+                            <div class="d-flex flex-column ">
+                                <div class="justify-content-center align-items-center d-flex flex-column">
+                                    <div class="pt-3">
+                                        <h3 class="main-color-text fa-4x">Sign in</h3>
+                                        <div class=" main-line"></div>
+                                    </div>
+                                    <div class="pt-3">
+                                        <h1 class="main-color-text fa-7x"><span style="color: blue;">V</span>ioni<span
+                                                style="color: red;">l</span>a</h1>
+                                        <div class="main-line"></div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="p-5 container">
+                                <div class="mine-bg-color">
+                                    <div class="row">
+                                        <div class="d-flex justify-content-around">
+                                            <div class="main-icon">
+                                                <a class="main-link " href="#">Facebook</a>
+                                            </div>
+                                            <div class="main-icon">
+                                                <a class="main-link " href="#">Twitter</a>
+                                            </div>
+                                            <div class="main-icon">
+                                                <a class="main-link " href="#">Instagram</a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
