--- a/index.html
+++ b/index.html
@@ -21,10 +21,24 @@
 <body>
 
     <!-- sign_in -->
-    <div class="main d-flex">
+    <div class="main d-flex flex-lg-row flex-column ">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-md-12 col-sm-12 d-flex justify-content-center align-items-center">
+                <div class="col-12 d-lg-none mb-3">
+                    <div class="container">
+                        <div class="row">
+                            <div class="d-lg-none d-flex justify-content-between ">
+                                <div class="mina-bg-color d-flex align-items-center">
+                                    <h1 class="main-color-text logo-md logo-sm">Vionila</h1>
+                                </div>
+                                <div class="mina-bg-color d-flex align-items-center">
+                                    <h3 class=" main-color-text sign-in-sm sign-in-md">Sign in</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-7 col-md-12 col-sm-12 d-flex justify-content-center align-items-center">
                     <div class="container ml-lg-3">
                         <form class="">
                             <input type="email" class="mb-3 main-input" placeholder="Email">
@@ -33,39 +47,39 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12">
+                <div class="col-lg-5">
                     <div class="container">
                         <div class="mina-bg-color">
-                            <div class="d-flex flex-column ">
+                            <div class="d-lg-flex flex-lg-column d-none">
                                 <div class="justify-content-center align-items-center d-flex flex-column">
-                                    <div class="pt-3">
-                                        <h3 class="main-color-text fa-4x">Sign in</h3>
+                                    <div class="pt-4">
+                                        <h3 class="pb-3 main-color-text fa-4x">Sign in</h3>
                                         <div class=" main-line"></div>
                                     </div>
                                     <div class="pt-3">
-                                        <h1 class="main-color-text fa-7x"><span style="color: blue;">V</span>ioni<span
-                                                style="color: red;">l</span>a</h1>
+                                        <h1 class="main-color-text fa-7x">Vionila</h1>
                                         <div class="main-line"></div>
                                     </div>
-
                                 </div>
                             </div>
-                            <div class="p-5 container">
-                                <div class="mine-bg-color">
-                                    <div class="row">
-                                        <div class="d-flex justify-content-around">
-                                            <div class="main-icon">
-                                                <a class="main-link " href="#">Facebook</a>
-                                            </div>
-                                            <div class="main-icon">
-                                                <a class="main-link " href="#">Twitter</a>
-                                            </div>
-                                            <div class="main-icon">
-                                                <a class="main-link " href="#">Instagram</a>
+                            <div class="col-12 mt-4 mt-lg-2">
+                                <div class="p-lg-5 p-3 container ">
+                                    <div class="mine-bg-color">
+                                        <div class="row">
+                                            <div class="d-flex justify-content-around">
+                                                <div class="main-icon">
+                                                    <a class="main-link font-sm" href="#">Facebook</a>
+                                                </div>
+                                                <div class="main-icon">
+                                                    <a class="main-link font-sm" href="#">Twitter</a>
+                                                </div>
+                                                <div class="main-icon">
+                                                    <a class="main-link font-sm" href="#">Instagram</a>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
 
+                                    </div>
                                 </div>
                             </div>
                         </div>
