--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 </div>
                             </div>
                             <div class="col-12 mt-4 mt-lg-2">
-                                <div class="p-lg-5 p-3 container ">
+                                <div class="p-lg-[1rem] p-3 container ">
                                     <div class="mine-bg-color">
                                         <div class="row">
                                             <div class="d-flex justify-content-around">
@@ -78,13 +78,12 @@
                                                 </div>
                                             </div>
                                         </div>
-
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>  
             </div>
         </div>
     </div>
